01-mnorouzi/k8s/workload/13-configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sematec-website
  namespace: my-ns
  labels:
    app.kubernetes.io/name: sematec-website
    app.kubernetes.io/env: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sematec-website
      app.kubernetes.io/env: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sematec-website
        app.kubernetes.io/env: development
    spec:
      containers:
        - name: app-dev
          image: 9350733512/app:v.10.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
