01-mnorouzi/k8s/workload/15-deploy-vol.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobinnet-panel
  namespace: my-ns
  labels:
    app.kubernetes.io/name: mobinnet-panel
    app.kubernetes.io/env: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mobinnet-panel
      app.kubernetes.io/env: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mobinnet-panel
        app.kubernetes.io/env: development
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
          - name: nginx-log
            mountPath: /var/log/nginx
          - name: nginx-data
            mountPath: /etc/nginx/conf.d
          - name: nginx-html
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-log
          hostPath:
            path: /root/nginx/log
        - name: nginx-data
          hostPath:
            path: /root/nginx/data
        - name: nginx-html
          hostPath:
            path: /root/nginx/html
