01-mnorouzi/k8s/workload/18-final.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app1-ns
---
apiVersion: v1
kind: Service
metadata:
  name: sematec-website
  namespace: app1-ns
  labels:
    app.kubernetes.io/name: sematec-website
    app.kubernetes.io/env: development
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sematec-website
    app.kubernetes.io/env: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sematec-website
  namespace: app1-ns
  labels:
    app.kubernetes.io/name: sematec-website
    app.kubernetes.io/env: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sematec-website
      app.kubernetes.io/env: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sematec-website
        app.kubernetes.io/env: development
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sematec-website
  namespace: app1-ns
  labels:
    app.kubernetes.io/name: sematec-website
    app.kubernetes.io/env: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: "sematec2.ir"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sematec-website
                port:
                  number: 80
